--- a/src/main/angular/src/peoplesearch/person-card.component.scss
+++ b/src/main/angular/src/peoplesearch/person-card.component.scss
@@ -16,7 +16,6 @@ person-card {
   border: 1px solid $person-card-bg-color;
   border-radius: 3px;
   box-sizing: border-box;
-  cursor: pointer;
   display: block;
   height: $person-card-height;
   padding: $person-card-spacing;
@@ -25,9 +24,13 @@ person-card {
   vertical-align: top;
   width: $person-card-width;
 
-  &:hover {
-    background-color: $person-card-hover-bg-color;
-    border-color: $person-card-border-color;
+  &[ng-click] {
+    cursor: pointer;
+
+    &:hover {
+      background-color: $person-card-hover-bg-color;
+      border-color: $person-card-border-color;
+    }
   }
 
   &[size="large"] {
@@ -61,6 +64,12 @@ person-card {
     height: 96px;
     padding: 0;
     width: 120px;
+
+    &[ng-click] {
+      &:hover {
+        background-color: transparent;
+      }
+    }
 
     > .person-card-content {
       display: block;
